--- a/src/main/resources/templates/earthquakes/results.html
+++ b/src/main/resources/templates/earthquakes/results.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" lang="en"> 
   <head>
-    <title>Earthquakes Search</title>
+    <title>Earthquake Search</title>
     <div th:replace="bootstrap/bootstrap_head.html"></div>
   </head>
   <body>
     <div class="container">
       <div th:replace="bootstrap/bootstrap_nav_header.html"></div>
 
-      <h1>Earthquakes Search</h1>
+      <h1>Earthquake Search</h1>
 
       <table>
           <tr>
