--- a/src/main/resources/templates/earthquakes/results.html
+++ b/src/main/resources/templates/earthquakes/results.html
@@ -33,6 +33,7 @@
                   <th>id</th>
                   <th>place</th>
                   <th>mag</th>
+                  <th>title</th>
               </tr>
           </thead>
           <tbody>
@@ -40,6 +41,7 @@
                   <td th:text="${f.id}"></td>
                   <td th:text="${f.properties.place}"></td>
                   <td th:text="${f.properties.mag}"></td>
+                  <td th:text="${f.properties.title}"></td>
               </tr>
           </tbody>
       </table>
