--- a/src/main/resources/templates/earthquakes/results.html
+++ b/src/main/resources/templates/earthquakes/results.html
@@ -10,13 +10,12 @@
 
       <h1>Earthquake Search Results</h1>
 
-      <h2>Results</h2>
       <table class="table">
         <thead>
             <tr>
                 <th>Title</th>
-                <th>Distance</th>
-                <th>Minmag</th>
+                <th>Distance (km)</th>
+                <th>Minimum Magnitude</th>
                 <th>Count</th>
             </tr>
         </thead>
@@ -35,8 +34,8 @@
           <thead>
               <tr>
                   <th>id</th>
-                  <th>place</th>
-                  <th>mag</th>
+                  <th>Place</th>
+                  <th>Magnitude</th>
               </tr>
           </thead>
           <tbody>
